feat: company model with swagger docs. proof of fast CRUD creation
