# model/company/router.js
@@ -1,0 +1,16 @@
+const controller = require('./controller');
+const Router = require('express').Router;
+const router = new Router();
+
+router.route('/')
+  .get((...args) => controller.paginate(...args))
+  .post((...args) => controller.create(...args));
+
+router.route('/:id')
+  .put((...args) => controller.update(...args))
+  .get((...args) => controller.findById(...args))
+  .delete((...args) => controller.remove(...args));
+
+router.endpoint = "/company"
+
+module.exports = router;
